--- a/.github/workflows/eslint.yaml
+++ b/.github/workflows/eslint.yaml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 21
-      - run: npm ci
+      - run: npm i
       - run: npm run lint
